--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -65,7 +65,7 @@
       <h2 class="text-center">Nuestro equipo</h2>
       <div class="row text-center">
           <div class="col-md-4">
-              <img src="" alt="" class="rounded-circle mb-3">
+              <img src="{% static 'img/Simon.png' %}" alt="" class="rounded-circle mb-3">
               <h4>Simon Botero</h4>
               <p class="text-success">
                 <i class="fas fa-award text-success mb-3"></i> Developer</p>
@@ -74,7 +74,7 @@
                 <i class="fas fa-envelope-open"></i> sboterov3@eafit.edu.co</p>
             </div>
             <div class="col-md-4">
-              <img src="" alt="" class="rounded-circle mb-3">
+              <img src="{% static 'img/miguel.png' %}" alt="" class="rounded-circle mb-3">
               <h4>Miguel Martinez</h4>
               <p class="text-success">
                 <i class="fas fa-award text-success mb-3"></i> Developer</p>
@@ -83,7 +83,7 @@
                 <i class="fas fa-envelope-open"></i> mamartin11@eafit.edu.co</p>
             </div>
             <div class="col-md-4">
-              <img src="" alt="" class="rounded-circle mb-3">
+              <img src="{% static 'img/jaco.png' %}" alt="" class="rounded-circle mb-3">
               <h4>Jacobo Zuluaga</h4>
               <p class="text-success">
                 <i class="fas fa-award text-success mb-3"></i> Developer</p>
