--- a/RooMe/static/css/all.css
+++ b/RooMe/static/css/all.css
@@ -6,7 +6,14 @@
 /* Cambia el font-family en el cuerpo de tu página */
 body {
   font-family: 'Poppins', sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+.content {
+  flex: 1;
+}
+
 
 .fa,
 .fas,
