--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -32,7 +32,7 @@
   <!-- Alerts -->
   {% include 'partials/_alerts.html' %}
 
-  <section id="dashboard" class="py-4">
+  <section id="dashboard" class="py-4 mb-auto">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
