--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -13,7 +13,7 @@
           <h1 class="display-2 mb-4 text-white font-bold">
             RooMe
           </h1>
-          <p class="lead">Encuentra la habitacion que se ajuste a tus necesidades!</p>
+          <p class="lead">Comodidad fuera de tu ciudad!</p>
           <div class="search">
             <form method="GET"> 
               <!-- Form Row 1 -->
